# autapi

./: Cargo.toml  LICENSE  README.md
autapi/: Cargo.toml
autapi-macros/: Cargo.toml
autapi-macros/src/: doc_attr.rs  endpoint.rs  lib.rs  responses.rs
autapi-macros/src/to_schema/: attrs.rs  deserialize.rs  mod.rs  model.rs  schema.rs  serialize.rs
autapi-macros/src/utils/: case.rs  generics.rs  meta.rs  mod.rs  punctuated.rs
autapi/examples/: todo.rs
autapi/src/: adapters.rs  endpoint.rs  lib.rs  rapidoc.rs  registry.rs  router.rs  utils.rs
autapi/src/openapi/: macros.rs  mod.rs  ref.rs  schema.rs
autapi/src/openapi/snapshots/: autapi__openapi__tests__defaults-10.snap  autapi__openapi__tests__defaults-11.snap  autapi__openapi__tests__defaults-12.snap  autapi__openapi__tests__defaults-13.snap  autapi__openapi__tests__defaults-14.snap  autapi__openapi__tests__defaults-15.snap  autapi__openapi__tests__defaults-16.snap  autapi__openapi__tests__defaults-17.snap  autapi__openapi__tests__defaults-18.snap  autapi__openapi__tests__defaults-19.snap  autapi__openapi__tests__defaults-2.snap  autapi__openapi__tests__defaults-20.snap  autapi__openapi__tests__defaults-21.snap  (+19 more)
autapi/src/private/: mod.rs  schema.rs
autapi/src/request/: json.rs  mod.rs  path.rs  query.rs  state.rs  undocumented.rs  utils.rs
autapi/src/response/: json.rs  mod.rs  status_codes.rs  text.rs  undocumented.rs
autapi/src/schema/: iterator.rs  macros.rs  mod.rs  nullable.rs
autapi/tests/: derive_to_schema.rs
autapi/tests/snapshots/: derive_to_schema__enum-10.snap  derive_to_schema__enum-11.snap  derive_to_schema__enum-12.snap  derive_to_schema__enum-13.snap  derive_to_schema__enum-2.snap  derive_to_schema__enum-3.snap  derive_to_schema__enum-4.snap  derive_to_schema__enum-5.snap  derive_to_schema__enum-6.snap  derive_to_schema__enum-7.snap  derive_to_schema__enum-8.snap  derive_to_schema__enum-9.snap  derive_to_schema__enum.snap  derive_to_schema__enum_optional-2.snap  derive_to_schema__enum_optional-3.snap  derive_to_schema__enum_optional-4.snap  derive_to_schema__enum_optional-5.snap  derive_to_schema__enum_optional-6.snap  derive_to_schema__enum_optional.snap  derive_to_schema__enum_unit_only-2.snap  derive_to_schema__enum_unit_only-3.snap  derive_to_schema__enum_unit_only-4.snap  derive_to_schema__enum_unit_only.snap  derive_to_schema__named_field_struct-2.snap  derive_to_schema__named_field_struct-3.snap  derive_to_schema__named_field_struct-4.snap  derive_to_schema__named_field_struct-5.snap  derive_to_schema__named_field_struct-6.snap  derive_to_schema__named_field_struct.snap  derive_to_schema__tuple_struct-2.snap  derive_to_schema__tuple_struct-3.snap  derive_to_schema__tuple_struct-4.snap  derive_to_schema__tuple_struct.snap  derive_to_schema__unit_struct-2.snap  derive_to_schema__unit_struct-3.snap  derive_to_schema__unit_struct-4.snap  derive_to_schema__unit_struct.snap  derive_to_schema__using-10.snap  derive_to_schema__using-11.snap  derive_to_schema__using-12.snap  (+22 more)
(+16 files in other folders)
