[package]
name = "autapi-macros"
version = "0.0.1"
description = "Macros for autapi"
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
convert_case = { workspace = true }
